# automatic-differentiation

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeCoverage.yml  tests.yml
docs/: documentation.ipynb  milestone1.md  milestone2.ipynb  milestone2_progress.md
src/autodiff_package/: __init__.py  differentiate.py  functions.py  node.py
src/cs107_team38_ad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .coverage  run_tests.sh  test_differentiate.py  test_functions.py  test_node.py
